# mlx-llm

./: CODEGRAPH.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: convert_gguf.rs  generate.rs  kv_quant_bench.rs  rvq_generate_quality.rs  sdpa_f32_repro.rs  sdpa_prefill_real_model.rs
server/: Cargo.toml
server/src/: http.rs  main.rs  openai.rs
src/: config.rs  error.rs  image.rs  joycaption.rs  lib.rs  prepare.rs  provider.rs  snapshot.rs
src/decode/: batch.rs  cancel.rs  continuous.rs  mod.rs  prefix.rs  speculative.rs  stream.rs
src/gguf/: convert.rs  dequant.rs  iq_grids.rs  mod.rs  reader.rs  tokenizer.rs
src/models/: deepstack.rs  llama.rs  mod.rs  qwen35.rs  qwen35_vision.rs  siglip.rs
src/models/testdata/: qwen35_deltanet_oracle.json  qwen35_moe_oracle.json  qwen35_mrope_oracle.json  qwen35_preprocess_oracle.json  qwen35_vision_oracle.json  qwen3vl_chat_template_oracle.json  qwen3vl_mrope_oracle.json  qwen3vl_video_oracle.json  qwen3vl_vision_oracle.json
src/primitives/: attention.rs  gated_delta.rs  kv_bench.rs  kv_cache.rs  metal_kernel.rs  mod.rs  nn.rs  paged_attention.rs  paged_kv_cache.rs  projection.rs  quant.rs  quant_kv.rs  rope.rs  sampler.rs  weights.rs
src/primitives/quant/: bit_packing.rs  codebook.rs  linear.rs  mod.rs  rvq.rs  scalar_quant.rs
tests/: batch.rs  breadth.rs  byo.rs  conformance.rs  continuous.rs  contract_roundtrip.rs  gguf.rs  gguf_tokenizer.rs  joycaption.rs  paged.rs  prefix.rs  prepare_snapshot.rs  qwen35.rs  qwen35_tools.rs  qwen35_vision.rs  qwen3vl.rs  real_breadth.rs  real_weights.rs  rvq_oracle.rs  snapshot_hf.rs  speculative.rs  stop_strings.rs  streaming.rs  structured.rs  thinking.rs  throughput_breakdown.rs
tests/fixtures/: rvq_oracle.json
tools/: gen_qwen3vl_mrope_oracle.py  gen_qwen3vl_video_oracle.py  gen_qwen3vl_vision_oracle.py
